public enum PaymentMethod {
    Insurance,
    CreditCard,
    Cash
}
