
public enum Status
    {
        SCHEDULED, 
        COMPLETED,
        CANCELLED, 
        PENDING,
        PAID,
        REFUNDED
    }
